@@ -3,6 +3,8 @@ master
   Added thread creation QR cooldown.
   Fix QR cooldown timer between non-sage and sage posts. You can submit a non-sage post 30 seconds after a sage one.
   Fix /q/ QR cooldowns.
+- zixaphir
+  Youtube Embedding
 
 2.35.8
 - noface
